# MyBackup

./: Makefile.am  README.md  configure.ac  exclude.conf  mybackup  mybackup.conf  mybackup.sh
doc/: MyBackup.html  MyBackup.tex
